fix code spacing

--- a/src/style/notification-center.scss
+++ b/src/style/notification-center.scss
@@ -1,8 +1,9 @@
 @import "mixins";
 
+$notification-bg-color: rgba(0, 0, 0, 0.05);
 $notification-panel-bg-color: rgba(255,255,255,1);
 $notification-text-color: rgb(50, 124, 169);
-$notification-separator-color:  rgba(0,0,0,0.1);
+$notification-separator-color: rgba(0, 0, 0, 0.1);
 
 
 div[data-focus='notification-center'] {
@@ -101,7 +102,6 @@ div[data-focus='notification-center'] {
                 margin: 10px 0;
             }
             [data-focus='notification'] {
-                // @include BoxShadowHelper(2);
                 display: flex;
                 flex-flow: row wrap;
                 align-items: center;
@@ -122,7 +122,6 @@ div[data-focus='notification-center'] {
                     align-items: center;
                     justify-content: center;
                     img {
-                        //-webkit-filter: grayscale(0.7);
                         width: 80%;
                     }
                 }
@@ -142,7 +141,7 @@ div[data-focus='notification-center'] {
                     [data-focus='notification-content']{
                         line-height: normal;
                         font-size: 13px;
-                        color: rgba(104,104,104, 255)
+                        color: rgba(104, 104, 104, 255);
                     }
                 }
                 //On hover on the line, the date is hidden and the button is visible.
@@ -161,7 +160,7 @@ div[data-focus='notification-center'] {
                     text-align: center;
                     width: 15%;
                     font-size: 13px;
-                    button{
+                    button {
                         display: none;
                     }
                 }
